<resources>
    <string name="app_name">Vulnerabilities Testing App</string>
    <string name="search">Search</string>
    <string name="systemapps">Show System Apps</string>
    <string name="installed">Show Installed Apps</string>
    <string name="share">Share App</string>
    <string name="contact">Contact Developer</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate Us</string>
    <string name="saved_path">Saved Path</string>
    <string name="name_format">Apk File Name Saving Format</string>
    <string name="naming_convention">Extracted application naming convention.</string>
    <string name="showdetails">Show App Details</string>
    <string name="dialog_confirm">Show dialog with app details before extracting apk.</string>
    <string name="theme">Theme</string>
    <string name="themecolor">Theme Color</string>
    <string name="rateusstat">Enjoying this app? Would you mind giving a feedback on Google Play Store.</string>
    <string name="adsstat">Get rid of Ads. Your small contribution helps me a lot.</string>
    <string name="feedback">Feedback</string>
    <string name="feedstat">If you have any suggestions, questions or problems, don\'t hesitate to contact me. </string>
    <string name="appversion">App Version</string>
    <string name="support">Support</string>
    <string name="general">General</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="other">Other</string>
    <string name="cancel">Cancel</string>
    <string name="extract">Extract</string>
    <string name="selectall">Select All</string>
    <string name="appname">App Name</string>
    <string name="pkgname">Package Name</string>
    <string name="vername">Version Name</string>
    <string name="vercode">Version Code</string>
    <string name="ok">Ok</string>
    <string name="themestat">Select a Theme Color</string>
    <string name="translation">Translations</string>
    <string name="transstat">Help me in translating. Your name will be featured in this app.</string>
    <string name="apksaved">Apk Saved.</string>
    <string name="extall">Extracted all the selected Apk\'s.</string>
    <string name="unextall">Unable to Save all the Apk\'s.</string>
    <string name="unabletoext">Unable to Save this Apk.</string>
    <string name="extracted">Apk Saved Successfully.</string>
    <string name="open">Open</string>
    <string name="shareapk">Share</string>
    <string name="version">Version</string>
    <string name="targetsdk">Target SDK</string>
    <string name="minsdk">Minimum SDK</string>
    <string name="uid">UID</string>
    <string name="permission">Permissions</string>
    <string name="appsize">Size</string>
    <string name="extracting">Exporting APK</string>
    <string name="loading">Loading Apps</string>
    <string name="noapps">No Such App Found</string>
    <string name="appinfo">App Info</string>
    <string name="launch">Launch</string>
    <string name="saveicon">Save Icon</string>
    <string name="viewonplay">View on Play Store</string>
    <string name="savedicon">Saved Icon of</string>
    <string name="unablesavedicon">Unable to Save Icon of</string>
    <string name="totalextracted">Saved</string>
    <string name="apps">Apps</string>
    <string name="share_now">Share Now</string>
    <string name="share_via">Share Via</string>
    <string name="email_via">Email Via</string>
    <string name="premium_user">You are already a Premium User.</string>
    <string name="purchase_done">Purchase Done Successfully…</string>
    <string name="appversionis">App Version is</string>
    <string name="select_again">Select Again</string>
    <string name="share_msg">Extract Apk\'s with this lightning fast Apk Extractor.</string>
    <string name="vulnerabilites_testing_trough_mobo_sf">Vulnerabilites Testing using MoboSF</string>
    <string name="vulnerabilities_testing_through_bevigil">Vulnerabilities Testing using Bevigil</string>
    <string name="save">Scan App</string>
    <string name="choose_app_from_installed_apps">Choose App from Installed Apps</string>
    <string name="choose_app_from_files">Choose App from Files</string>
    <string name="bevigil">Bevigil</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="download_pdf_report">Download PDF Report</string>
    <string name="app_details">App Details</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="exapand_all">Exapand All</string>
    <string name="collapse_all">Collapse All</string>
</resources>