<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_item"
        android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/bevigil"
                android:icon="@drawable/bevigil_logo"
                android:title="@string/bevigil"
                android:checkable="true"/>

        </menu>
    </item>

    <item
        android:id="@+id/labels_item"
        android:title="@string/about">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/info"
                app:iconTint="@color/colorPrimaryDark"
                android:title="@string/about"
                android:checkable="true"/>
        </menu>
    </item>
</menu>