<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorAccent"
        android:id="@+id/toolbarLayout"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_alignParentStart="true"
            android:layout_height="40dp"
            android:id="@+id/backPress"
            app:tint="@color/white"
            android:onClick="backPressed"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/installed_apps"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            >

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="searchClicked" />


        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>


    <TextView
        android:id="@+id/txt_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/loading"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/txt_noapps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/noapps"
        android:textSize="15.5sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_apps"
        android:layout_width="match_parent"
        android:layout_below="@id/toolbarLayout"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:visibility="gone" />



</RelativeLayout>